# proton-drive-client-rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/superpowers/plans/: 2026-07-19-proton-drive-cli-auth.md
docs/superpowers/specs/: 2026-07-19-proton-drive-barebones-cli-design.md
src/: cli.rs  config.rs  conflict.rs  crypto.rs  drive.rs  error.rs  main.rs  session.rs  srp.rs
src/api/: account.rs  auth.rs  drive.rs  mod.rs
src/commands/: download.rs  login.rs  logout.rs  mod.rs  upload.rs
