[package]
name = "proton-drive"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bcrypt = "0.19.2"
clap = { version = "4.6.2", features = ["derive"] }
keyring = { version = "4.1.5", features = ["v1"] }
num-bigint = "0.5.1"
pgp = "0.20.0"
rand = "0.10.2"
rand08 = { version = "0.8", package = "rand" }
rpassword = "7.5.4"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
sha1 = "0.11.0"
sha2 = "0.11.0"
thiserror = "2.0.19"
ureq = { version = "3.3.0", features = ["json", "multipart"] }
